--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
     "target": "es2020",
     "strict": true,
     "preserveConstEnums": true,
-    "noEmit": true,
+    "noEmit": false,
     "sourceMap": false,
     "module": "es2015",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "deploy/src/",
+    "outDir": "./deploy/",
   },
   "tsc-alias": {
     "resolveFullPaths": true,
